--- a/style.css
+++ b/style.css
@@ -406,4 +406,18 @@ textarea:focus{
   background: #1b1464;
 }
 
+.header-right {
+  float: right;
+}
 
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
