--- a/style.css
+++ b/style.css
@@ -271,37 +271,40 @@ header {
   }
 }
 @media (max-width: 768px) {
-  section {
-    padding: 50px 8%;
+  header {
+    padding: 14px 20px;
   }
-  #courses-icon {
-    display: initial;
-    color: var(--text-color);
-  }
-  header .navbar {
-    position: absolute;
-    top: -400px;
-    left: 0;
-    right: 0;
-    display: flex;
+
+  .navbar {
+    display: none;
     flex-direction: column;
     text-align: center;
     background: var(--bg-color);
     box-shadow: 0 4px 4px rgb(0 0 0 / 10%);
-    transition: 0.2s ease;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    right: 0;
+    overflow: hidden;
   }
+
   .navbar.active {
-    top: 100%;
+    display: flex;
   }
+
   .navbar a {
     padding: 1.5rem;
     display: block;
     background: var(--bg-color);
   }
-  #darkmode {
-    position: absolute;
-    top: 1.4rem;
-    right: 2rem;
+
+  #menu-icon {
+    display: initial;
+    font-size: 2rem;
+    cursor: pointer;
+    position: fixed;
+    top: 10px;
+    right: 20px;
   }
 }
 @media (max-width: 715px) {
@@ -406,18 +409,15 @@ textarea:focus{
   background: #1b1464;
 }
 
-.header-right {
-  float: right;
+.menu-toggle {
+  display: none;
+  font-size: 24px;
+  cursor: pointer;
 }
 
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .header-right {
-    float: none;
+@media screen and (max-width: 768px) {
+  .menu-toggle {
+    display: block; 
   }
 }
+
