--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ header {
 }
 .about-text span {
   color: var(--main-color);
+  font-size: 90px;
   font-weight: 500;
 }
 .about-text h2 {
@@ -129,6 +130,7 @@ header {
 }
 .heading span {
   color: var(--main-color);
+  font-size: 90px;
   font-weight: 500;
 }
 .heading h2 {
@@ -215,7 +217,8 @@ header {
 
 .connect-text span {
   color: var(--main-color);
-  font-weight: 800;
+  font-size: 90px;
+  font-weight: 500;
 }
 .connect-text h2 {
   font-size: var(--h2-font);
