--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ header {
 }
 .contact {
   display: grid;
+  align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(200px, auto));
   gap: 1.5rem;
 }
