--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ header {
   font-weight: 500;
 }
 .connect-text h2 {
-  margin: 0 auto;
+  padding-left: 300px;
   font-size: var(--h2-font);
   
 }
