--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   padding: 0;
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
-  scroll-behavior: smooth;
+  scroll-behavior:smooth;
   scroll-padding-top: 2rem;
   list-style: none;
   text-decoration: none;
@@ -39,7 +39,7 @@ body {
   cursor: pointer;
 }
 header {
-  position: absolute;
+  position:fixed;
   width: 100%;
   top: 0;
   right: 0;
@@ -56,23 +56,19 @@ header {
   font-weight: 800;
   color: var(--main-color);
 }
-
 .navbar {
   display: flex;
   align-items: right;
 }
-
 .navbar a {
   font-size: 1rem;
   padding: 10px 20px;
   color: var(--text-color);
   font-weight: 500;
 }
-
 .navbar a:hover {
   color: var(--main-color);
 }
-
 #menu-icon {
   font-size: 2rem;
   cursor: pointer;
@@ -120,7 +116,6 @@ header {
 }
 .about-text span {
   color: var(--main-color);
-  font-size: 40px;
   font-weight: 500;
 }
 .about-text h2 {
@@ -134,7 +129,6 @@ header {
 }
 .heading span {
   color: var(--main-color);
-  font-size: 40px;
   font-weight: 500;
 }
 .heading h2 {
@@ -218,28 +212,16 @@ header {
   justify-content: space-around;
 }
 
-/* .connect-text span {
-  display: table;
-  margin: 0 auto; 
+
+.connect-text span {
   color: var(--main-color);
-  font-size: 40px;
-  font-weight: 500; 
-}  */
-
-
-/* .connect-text h2 {
- padding-left: 270px; 
- font-size: var(--h2-font);
-  
-}  */
-
-.connect-text h4{
-text-align:center;
-  
+  font-weight: 500;
+}
+.connect-text h2 {
+  font-size: var(--h2-font);
 }
 .contact {
   display: grid;
-/*   align-items: center; */
   grid-template-columns: repeat(auto-fit, minmax(200px, auto));
   gap: 1.5rem;
 }
@@ -288,9 +270,66 @@ text-align:center;
     --h2-font: 1.7rem;
   }
 }
+/* @media (max-width: 768px) {
+  section {
+    padding: 50px 8%;
+  }
+  #courses-icon {
+    display: initial;
+    color: var(--text-color);
+  }
+  header .navbar {
+    position: absolute;
+    top: -400px;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background: var(--bg-color);
+    box-shadow: 0 4px 4px rgb(0 0 0 / 10%);
+    transition: 0.2s ease;
+  }
+  .navbar.active {
+    top: 100%;
+  }
+  .navbar a {
+    padding: 1.5rem;
+    display: block;
+    background: var(--bg-color);
+  }
+  #darkmode {
+    position: absolute;
+    top: 1.4rem;
+    right: 2rem;
+  }
+} */
 @media (max-width: 768px) {
   header {
     padding: 14px 20px;
+  }
+
+  .navbar {
+    display: none;
+    flex-direction: column;
+    text-align: center;
+    background: var(--bg-color);
+    box-shadow: 0 4px 4px rgb(0 0 0 / 10%);
+    position: fixed;
+    top: 80px;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+  }
+
+  .navbar.active {
+    display: flex;
+  }
+
+  .navbar a {
+    padding: 1.5rem;
+    display: block;
+    background: var(--bg-color);
   }
 
   #menu-icon {
@@ -302,6 +341,9 @@ text-align:center;
     right: 20px;
   }
 }
+
+
+
 @media (max-width: 715px) {
   header {
     padding: 10px 16px;
@@ -404,21 +446,10 @@ textarea:focus{
   background: #1b1464;
 }
 
-/* .menu-toggle {
+.menu-toggle {
   display: none;
   font-size: 24px;
   cursor: pointer;
-} */
-
-
-.menu-toggle {
-  display: block;
-  font-size: 2rem;
-  cursor: pointer;
-  position: fixed;
-  top: 10px;
-  right: 20px;
-  z-index: 9999; /* Ensure it's above other elements */
 }
 
 @media screen and (max-width: 768px) {
@@ -427,42 +458,92 @@ textarea:focus{
   }
 }
 
+/* .contentContainer{
+  width: 100%;
+  height: 100vh;
+  background: #3c5077;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
+/* .popup{
+  width: 300px;
+  height: 350px;
+  background: #fff;
+  border-radius: 6px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%,-50%) scale(0.1);
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #333;
+  visibility: hidden;
+  transition: transform 0.4s, top 0.4s;
+}
+
+
+.open-popup{
+visibility: visible;
+top: 50%;
+transform: translate(-50%, -50%) scale(1);
+
+} */
+
+.popup {
+  width: 300px;
+  height: 350px;
+  background: #fff;
+  border-radius: 6px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #333;
+  opacity: 0;
+  visibility: hidden;
+  transition: transform 0.4s, opacity 0.4s;
+}
+
+.open-popup {
+  visibility: visible;
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+
+
+.popup img{
+  width: 100px;
+  margin-top: -2px;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2)  ;
+}
+
+
+.popup button{
+  width: 50%;
+  margin-top: 10px;
+  padding: 4px 0;
+  background: #1b67ff;
+  color: #fff;
+  border: 0;
+  outline: none;
+  font-size: 18px;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+
 .box:hover{
   scale: 1.1;
   
 }
 
-
-
-
-/* .navbar {
-    display: none;
-    flex-direction: column;
-    text-align: center;
-    background: var(--bg-color);
-    box-shadow: 0 4px 4px rgb(0 0 0 / 10%);
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
-    position: fixed;
-    top: 80px;
-    left: 0;
-    right: 0;
-    overflow: hidden;
-  } */
-
-
-/* .navbar a {
-    padding: 1.5rem;
-    display: block;
-    background: var(--bg-color);
-    color: var(--text-color); 
-  } */
- 
-
-/*   .navbar.active {
-    display: flex;
-  } */
-
- 
 
 
 
