--- a/style.css
+++ b/style.css
@@ -213,13 +213,19 @@ header {
 }
 
 
-.connect-text span {
+/* .connect-text span {
   color: var(--main-color);
   font-weight: 500;
 }
 .connect-text h2 {
   font-size: var(--h2-font);
+} */
+
+.connect-text h4{
+text-align:center;
+  
 }
+
 .contact {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, auto));
